# sip

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
sip/: BUILD  helpers.cpp  helpers.hpp  sip.cpp  sip.hpp  sip_test.cpp  sparse.cpp  sparse.hpp  types.cpp  types.hpp
test/: BUILD  simple_nlp.cpp  simple_qp.cpp
